--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     </div>
     <nav>
         <ul>
+            <a href="#logo">
+                <li>
+                    Home
+                </li>
+            </a>
             <a href="#about">
                 <li>
                     About
@@ -39,11 +44,13 @@
                     Contact
                 </li>
             </a>
-            <a href="#gallery">
+            <!--
+                        <a href="#gallery">
                 <li>
                     Image gallery
                 </li>
             </a>
+            -->
             <li>
                 <h4>Eclectic site</h4>
                 <i class="fa-solid fa-external-link"></i>
@@ -234,7 +241,8 @@
             <input type="submit" value="Subscribe" />
         </form>
     </section>
-    <section>
+    <!--
+        <section>
         <article class="article-2">
             <h2 id="gallery" class="topic">Image gallery</h2>
             <div class="line"></div>
@@ -263,13 +271,10 @@
             </div>
         </article>
     </section>
+    -->
     <footer>
         Copyright &copy;
-        <script>
-            let date = new Date();
-            display(date.getFullYear());
-        </script>
-        A.T.M.F. JERRY
+        <p></p> A.T.M.F. JERRY
     </footer>
 </body>
 </html>
