--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body onload="displayCode()">
-    <div class="nav-bar">
+    <div class="nav-bar" id="home">
         <h1 id="logo" onclick="fullName()" title="Click to see fullname">A.T.M.F. JERRY</h1>
         <i class="fa-solid fa-bars"></i>
         <div class="close">
@@ -24,7 +24,7 @@
     </div>
     <nav>
         <ul>
-            <a href="#logo">
+            <a href="#home">
                 <li>
                     Home
                 </li>
