--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="js/webquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/index.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" charset="utf-8">
+    
+    </script>
 </head>
 <body onload="displayCode()">
     <div class="nav-bar" id="home">
