--- a/index.html
+++ b/index.html
@@ -47,12 +47,8 @@
                     Contact
                 </li>
             </a>
-            <li>
-                <h4>Eclectic site</h4>
-                <i class="fa-solid fa-external-link"></i>
-            </li>
         </ul>
-
+        
         <button id="subscribe">Subscribe</button>
 
         <div class="contact">
@@ -73,59 +69,45 @@
             </a>
         </div>
     </nav>
-    <div id="message"></div>
     <section>
-        <div class="greet">
-            <div class="carousel">
-                <i class="fa-solid fa-arrow-left"></i>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/jerry1.jpg" alt="Image 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry2.jpg" alt="Image 2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry3.jpg" alt="Image 3">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry4.jpg" alt="Image 4">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry5.jpg" alt="Image 5">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry6.jpg" alt="Image 6">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry7.jpg" alt="Image 7">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry8.jpg" alt="Image 8">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry9.jpg" alt="Image 9">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry10.jpg" alt="Image 10">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry11.jpg" alt="Image 11">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry12.jpg" alt="Image 12">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry13.jpg" alt="Image 13">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/jerry14.jpg" alt="Image 14">
-                    </div>
-                </div>
-                <i class="fa-solid fa-arrow-right" onclick="rotate()"></i>
-            </div>
-            <h2>Welcome to my site!</h2>
+
+        <div class="img-display">
+            <img src="" alt="" class="display">
         </div>
+
+        <div class="images">
+            <img src="img/jerry1.jpg" alt="">
+            <img src="img/jerry2.jpg" alt="">
+            <img src="img/jerry3.jpg" alt="">
+            <img src="img/jerry4.jpg" alt="">
+            <img src="img/jerry5.jpg" alt="">
+            <img src="img/jerry6.jpg" alt="">
+            <img src="img/jerry7.jpg" alt="">
+            <img src="img/jerry8.jpg" alt="">
+            <img src="img/jerry9.jpg" alt="">
+            <img src="img/jerry10.jpg" alt="">
+            <img src="img/jerry11.jpg" alt="">
+            <img src="img/jerry12.jpg" alt="">
+            <img src="img/jerry13.jpg" alt="">
+            <img src="img/jerry14.jpg" alt="">
+            <img src="img/jerry15.jpg" alt="">
+            <img src="img/jerry16.jpg" alt="">
+            <img src="img/jerry17.jpg" alt="">
+            <img src="img/jerry18.jpg" alt="">
+            <img src="img/jerry19.jpg" alt="">
+            <img src="img/jerry20.jpg" alt="">
+            <img src="img/jerry21.jpg" alt="">
+        </div>
+
+        <div class="cv">
+            <button id="cv">
+                Download CV
+            </button>
+            <button id="projects">
+                My Projects
+            </button>
+        </div>
+
         <article class="article-1">
             <h2 id="about">About</h2>
             <div class="line"></div>
@@ -205,26 +187,36 @@
                 Get in touch with me! Whether you have a question, collaboration idea, or just want to say hello, I'd love to hear from you. Reach out through the social media handles below.
             </p>
             <div class="contact">
-                <a href="https://wa.me/+2348123998572">
-                    <b>WhatsApp</b>
-                    <i class="fa-brands fa-whatsapp fa-1x"></i>
-                </a>
-                <a href="https://facebook.com/aribidarajerry">
-                    <b>Facebook</b>
-                    <i class="fa-brands fa-facebook fa-1x"></i>
-                </a>
-                <a href="https://github.com/aribidarajerry">
-                    <b>GitHub</b>
-                    <i class="fa-brands fa-github fa-1x"></i>
-                </a>
-                <a href="https://t.me/aribidarajerry">
-                    <b>Telegram</b>
-                    <i class="fa-brands fa-telegram fa-1x"></i>
-                </a>
-                <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
-                    <b>Mail</b>
-                    <i class="fa-solid fa-envelope fa-1x"></i>
-                </a>
+                <div id="whatsapp">
+                    <a href="https://wa.me/+2348123998572">
+                        <i class="fa-brands fa-whatsapp fa-1x"></i>
+                        <b>WhatsApp</b>
+                    </a>
+                </div>
+                <div id="facebook">
+                    <a href="https://facebook.com/aribidarajerry">
+                        <i class="fa-brands fa-facebook fa-1x"></i>
+                        <b>Facebook</b>
+                    </a>
+                </div>
+                <div id="github">
+                    <a href="https://github.com/aribidarajerry">
+                        <i class="fa-brands fa-github fa-1x"></i>
+                        <b>GitHub</b>
+                    </a>
+                </div>
+                <div id="telegram">
+                    <a href="https://t.me/aribidarajerry">
+                        <i class="fa-brands fa-telegram fa-1x"></i>
+                        <b>Telegram</b>
+                    </a>
+                </div>
+                <div id="mail">
+                    <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
+                        <i class="fa-solid fa-envelope fa-1x"></i>
+                        <b>Mail</b>
+                    </a>
+                </div>
             </div>
         </article>
     </section>
