--- a/index.html
+++ b/index.html
@@ -138,41 +138,41 @@
             </p>
             <div class="works">
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383569/Product.aspx" target="_blank">
-                    <div class="w">
-                        <img src="img/score.jpg" alt="Score image" class="work">
+                    <div>
+                        <img src="img/score.jpg" alt="Score image">
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383564/Product.aspx" target="_blank">
-                    <div class="w">
+                    <div>
                         <img src="img/audio.jpg"
                         alt="Score image"
-                        class="work">
+                       >
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
-                    <div class="w">
-                        <img src="img/trio.jpg" alt="Score image" class="work">
+                    <div>
+                        <img src="img/trio.jpg" alt="Score image">
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
-                    <div class="w">
-                        <img src="img/invention.jpg" alt="Score image" class="work">
+                    <div>
+                        <img src="img/invention.jpg" alt="Score image">
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
-                    <div class="w">
-                        <img src="img/moment.jpg" alt="Score image" class="work">
+                    <div>
+                        <img src="img/moment.jpg" alt="Score image">
                     </div>
                 </a>
                 <iframe src="https://youtube.com/embed/HQiaYBr4QTE?playlist=HQiaYBr4QTE&loop=1"></iframe>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
-                    <div class="w">
-                        <img src="img/gavotte.jpg" alt="Score image" class="work">
+                    <div>
+                        <img src="img/gavotte.jpg" alt="Score image">
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
-                    <div class="w">
-                        <img src="img/waltz-in-c-sharp.jpg" alt="Score image" class="work">
+                    <div>
+                        <img src="img/waltz-in-c-sharp.jpg" alt="Score image">
                     </div>
                 </a>
             </div>
