--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@
                 Welcome to my video showcase! Here, you'll find a selection of my performances, highlighting my skills as an instrumentalist. From classical masterpieces to contemporary works, I'm excited to share my musical interpretations with you. Explore the videos below to experience my passion for music.
             </p>
             <div class="works">
-                <iframe src="https://youtube.com/embed/EWUs8we7eMs?=1&playlist=EWUs8we7eMs&loop=1"></iframe>
-                <iframe src="https://youtube.com/embed/%5N4-vU0eKns?=1&playlist=5N4-vU0eKns&loop=1"></iframe>
-                <iframe src="https://youtube.com/embed/jPxaSGVwueA?=1&playlist=jPxaSGVwueA&loop=1"></iframe>
-                <iframe src="https://youtube.com/embed/VN8rN0hLrZM?playlist=VN8rN0hLrZM&loop=1"></iframe>
+                <iframe src="https://youtube.com/embed/VN8rN0hLrZM?playlist=VN8rN0hLrZM&loop=1"><!--Bach prelude in c minor--></iframe>
+                <iframe src="https://youtube.com/embed/HQiaYBr4QTE?playlist=HQiaYBr4QTE&loop=1"><!--Waltz in E minor--></iframe>
+                <iframe src="https://youtube.com/embed/jPxaSGVwueA?=1&playlist=jPxaSGVwueA&loop=1"><!--Rachmaninoff momenta musicaux--></iframe>
+                <iframe src="https://youtube.com/embed/EWUs8we7eMs?=1&playlist=EWUs8we7eMs&loop=1"><!--Minuet in B minor--></iframe>
+                <iframe src="https://youtube.com/embed/%5N4-vU0eKns?=1&playlist=5N4-vU0eKns&loop=1"><!--Chopin minuet waltz--></iframe>
             </div>
             <p class="content">
                 You can visit my YouTube channel for additional performances and music content by clicking <a href="https://www.youtube.com/@aribidarajerry7889"><i class="fa-brands fa-youtube"></i>Aribidara Jerry</a>.
@@ -137,6 +138,31 @@
                 Discover my musical creations, featuring a collection of videos and original compositions. Explore the intersection of sound and vision, and experience the depth of my artistic expression.
             </p>
             <div class="works">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
+                    <div>
+                        <img src="img/waltz-in-c-sharp.jpg" alt="Score image">
+                    </div>
+                </a>
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
+                    <div>
+                        <img src="img/gavotte.jpg" alt="Score image">
+                    </div>
+                </a>
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
+                    <div>
+                        <img src="img/moment.jpg" alt="Score image">
+                    </div>
+                </a>
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
+                    <div>
+                        <img src="img/invention.jpg" alt="Score image">
+                    </div>
+                </a>
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
+                    <div>
+                        <img src="img/trio.jpg" alt="Score image">
+                    </div>
+                </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383569/Product.aspx" target="_blank">
                     <div>
                         <img src="img/score.jpg" alt="Score image">
@@ -149,35 +175,9 @@
                        >
                     </div>
                 </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/trio.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/invention.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/moment.jpg" alt="Score image">
-                    </div>
-                </a>
-                <iframe src="https://youtube.com/embed/HQiaYBr4QTE?playlist=HQiaYBr4QTE&loop=1"></iframe>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/gavotte.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/waltz-in-c-sharp.jpg" alt="Score image">
-                    </div>
-                </a>
             </div>
             <p class="content">
-                You will find a list of my composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a> or <a href="https://www.sheetmusicplus.com/en/explore?q=Aribidara%20Jerry%20" target="_blank"><cite><i>SHEETMUSICPLUS</i></cite></a>.
+                You will find more of my documented composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a> or <a href="https://www.sheetmusicplus.com/en/explore?q=Aribidara%20Jerry%20" target="_blank"><cite><i>SHEETMUSICPLUS</i></cite></a>.
             </p>
         </article>
         <article class="article-3">
