--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
                 Discover my musical creations, featuring a collection of videos and original compositions. Explore the intersection of sound and vision, and experience the depth of my artistic expression.
             </p>
             <div class="works">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673648/Product.aspx" target="_blank">
+                    <div>
+                        <img src="img/waltz-in-f-minor.jpg" alt="Score image">
+                    </div>
+                </a>
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673645/Product.aspx" target="_blank">
+                    <div>
+                        <img src="img/musical-moment-1.jpg" alt="Score image">
+                    </div>
+                </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
                     <div>
                         <img src="img/waltz-in-c-sharp.jpg" alt="Score image">
