--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
                 Discover my musical creations, featuring a collection of videos and original compositions. Explore the intersection of sound and vision, and experience the depth of my artistic expression.
             </p>
             <div class="works">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1674853/Product.aspx" target="_blank">
+                    <div>
+                        <img src="img/how-great-is-our-God.jpg" alt="Score image">
+                    </div>
+                </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673648/Product.aspx" target="_blank">
                     <div>
                         <img src="img/waltz-in-f-minor.jpg" alt="Score image">
@@ -187,7 +192,7 @@
                 </a>
             </div>
             <p class="content">
-                You will find more of my documented composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a> or <a href="https://www.sheetmusicplus.com/en/explore?q=Aribidara%20Jerry%20" target="_blank"><cite><i>SHEETMUSICPLUS</i></cite></a>.
+                You will find more of my documented composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a>.
             </p>
         </article>
         <article class="article-3">
