--- a/index.html
+++ b/index.html
@@ -52,31 +52,29 @@
         <button id="subscribe">Subscribe</button>
 
         <div class="contact">
-            <a href="https://wa.me/+2348123998572">
+            <a href="https://wa.me/+2348123998572" target="_blank">
                 <i class="fa-brands fa-whatsapp fa-1x"></i>
             </a>
-            <a href="https://facebook.com/aribidarajerry">
+            <a href="https://facebook.com/aribidarajerry" target="_blank">
                 <i class="fa-brands fa-facebook fa-1x"></i>
             </a>
-            <a href="https://github.com/aribidarajerry">
+            <a href="https://github.com/aribidarajerry" target="_blank">
                 <i class="fa-brands fa-github fa-1x"></i>
             </a>
-            <a href="https://t.me/aribidarajerry">
+            <a href="https://t.me/aribidarajerry" target="_blank">
                 <i class="fa-brands fa-telegram fa-1x"></i>
             </a>
-            <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
+            <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry" target="_blank">
                 <i class="fa-solid fa-envelope fa-1x"></i>
             </a>
         </div>
     </nav>
     <section>
-
         <div class="img-display">
             <img src="" alt="" class="display">
         </div>
-
         <div class="images">
-            <img src="img/jerry1.jpg" alt="">
+            <!-- <img src="img/jerry1.jpg" alt="">
             <img src="img/jerry2.jpg" alt="">
             <img src="img/jerry3.jpg" alt="">
             <img src="img/jerry4.jpg" alt="">
@@ -96,9 +94,8 @@
             <img src="img/jerry18.jpg" alt="">
             <img src="img/jerry19.jpg" alt="">
             <img src="img/jerry20.jpg" alt="">
-            <img src="img/jerry21.jpg" alt="">
+            <img src="img/jerry21.jpg" alt=""> -->
         </div>
-
         <div class="cv">
             <button id="cv">
                 Download CV
@@ -112,7 +109,7 @@
             <h2 id="about">About</h2>
             <div class="line"></div>
             <p class="content">
-                Hello! I'm Aribidara Jerry, a multifaceted individual with a passion for teaching, music, and technology. As a certified teacher, I've had the privilege of inspiring and educating students in various settings. My love for music led me to become an instrumentalist, and I've had the honor of being certified by renowned institutions such as <a href="https://muson.org/">The Musical Society Of Nigeria (MUSON)</a> and <a href="https://www.abrsm.org/en-ng">The Associated Board of Royal Schools of Music (ABRSM)</a>.<br /><br />
+                Hello! I'm Aribidara Jerry, a multifaceted individual with a passion for teaching, music, and technology. As a certified teacher, I've had the privilege of inspiring and educating students in various settings. My love for music led me to become an instrumentalist, and I've had the honor of being certified by renowned institutions such as <a href="https://muson.org/" target="_blank">The Musical Society Of Nigeria (MUSON)</a> and <a href="https://www.abrsm.org/en-ng" target="_blank">The Associated Board of Royal Schools of Music (ABRSM)</a>.<br /><br />
                 In addition to my teaching and musical pursuits, I'm also a frontend developer with a keen interest in building innovative and user-friendly digital experiences. This site was solely developed by me. I'm always looking for ways to combine my skills to create something truly unique and impactful.
             </p>
         </article>
@@ -131,65 +128,146 @@
                 <iframe src="https://youtube.com/embed/%5N4-vU0eKns?=1&playlist=5N4-vU0eKns&loop=1"><!--Chopin minuet waltz--></iframe>
             </div>
             <p class="content">
-                You can visit my YouTube channel for additional performances and music content by clicking <a href="https://www.youtube.com/@aribidarajerry7889"><i class="fa-brands fa-youtube"></i>Aribidara Jerry</a>.
+                You can visit my YouTube channel for additional performances and music content by clicking <a href="https://www.youtube.com/@aribidarajerry7889" target="_blank"><i class="fa-brands fa-youtube"></i>Aribidara Jerry</a>.
             </p>
             <h3 class="sub-topic">Compositions</h3>
             <p class="content">
                 Discover my musical creations, featuring a collection of videos and original compositions. Explore the intersection of sound and vision, and experience the depth of my artistic expression.
             </p>
             <div class="works">
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1674853/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/how-great-is-our-God.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673648/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/waltz-in-f-minor.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673645/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/musical-moment-1.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/waltz-in-c-sharp.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/gavotte.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/moment.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/invention.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/trio.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383569/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/score.jpg" alt="Score image">
-                    </div>
-                </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383564/Product.aspx" target="_blank">
-                    <div>
-                        <img src="img/audio.jpg"
-                        alt="Score image"
+                <div>
+                    <img src="img/waltz-in-e-minor.jpg" alt="Score image"
                        >
-                    </div>
-                </a>
+                       <div class="links">
+                        <!-- Will be updated once Youtube video is created -->
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1678453/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/how-great-is-our-God.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1674853/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/waltz-in-f-minor.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673648/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/musical-moment-1.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673645/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/waltz-in-c-sharp.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/gavotte.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/moment.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/invention.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/trio.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/score.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383569/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
+                <div>
+                    <img src="img/audio.jpg" alt="Score image"
+                       >
+                       <div class="links">
+                        <!-- <a href="http://" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a> -->
+                        <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383564/Product.aspx" target="_blank">
+                            <i class="fa-solid fa-external-link"></i>
+                        </a>
+                       </div>
+                </div>
             </div>
             <p class="content">
                 You will find more of my documented composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a>.
@@ -203,31 +281,31 @@
             </p>
             <div class="contact">
                 <div id="whatsapp">
-                    <a href="https://wa.me/+2348123998572">
+                    <a href="https://wa.me/+2348123998572" target="_blank">
                         <i class="fa-brands fa-whatsapp fa-1x"></i>
                         <b>WhatsApp</b>
                     </a>
                 </div>
                 <div id="facebook">
-                    <a href="https://facebook.com/aribidarajerry">
+                    <a href="https://facebook.com/aribidarajerry" target="_blank">
                         <i class="fa-brands fa-facebook fa-1x"></i>
                         <b>Facebook</b>
                     </a>
                 </div>
                 <div id="github">
-                    <a href="https://github.com/aribidarajerry">
+                    <a href="https://github.com/aribidarajerry" target="_blank">
                         <i class="fa-brands fa-github fa-1x"></i>
                         <b>GitHub</b>
                     </a>
                 </div>
                 <div id="telegram">
-                    <a href="https://t.me/aribidarajerry">
+                    <a href="https://t.me/aribidarajerry" target="_blank">
                         <i class="fa-brands fa-telegram fa-1x"></i>
                         <b>Telegram</b>
                     </a>
                 </div>
                 <div id="mail">
-                    <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
+                    <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry" target="_blank">
                         <i class="fa-solid fa-envelope fa-1x"></i>
                         <b>Mail</b>
                     </a>
@@ -244,37 +322,6 @@
             <input type="submit" value="Subscribe" />
         </form>
     </section>
-    <!--
-        <section>
-        <article class="article-2">
-            <h2 id="gallery" class="topic">Image gallery</h2>
-            <div class="line"></div>
-            <div class="gallery">
-                <img src="img/jerry1.jpg" alt="Image">
-                <img src="img/jerry2.jpg" alt="Image">
-                <img src="img/jerry3.jpg" alt="Image">
-                <img src="img/jerry4.jpg" alt="Image">
-                <img src="img/jerry5.jpg" alt="Image">
-                <img src="img/jerry6.jpg" alt="Image">
-                <img src="img/jerry7.jpg" alt="Image">
-                <img src="img/jerry8.jpg" alt="Image">
-                <img src="img/jerry9.jpg" alt="Image">
-                <img src="img/jerry10.jpg" alt="Image">
-                <img src="img/jerry11.jpg" alt="Image">
-                <img src="img/jerry12.jpg" alt="Image">
-                <img src="img/jerry13.jpg" alt="Image">
-                <img src="img/jerry14.jpg" alt="Image">
-                <img src="img/jerry15.jpg" alt="Image">
-                <img src="img/jerry16.jpg" alt="Image">
-                <img src="img/jerry17.jpg" alt="Image">
-                <img src="img/jerry18.jpg" alt="Image">
-                <img src="img/jerry19.jpg" alt="Image">
-                <img src="img/jerry20.jpg" alt="Image">
-                <img src="img/jerry21.jpg" alt="Image">
-            </div>
-        </article>
-    </section>
-    -->
     <footer>
         Copyright &copy;
         <p></p> A.T.M.F. JERRY
