--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta name="keywords" content="Aribidara Jerry" />
-    <meta name="description" content="I'm a teacher, composer, frontend dev...">
+    <meta name="description" content="Aribidara Jerry, a Musician, Teacher, 
+    Composer, Instrumentalist, Web developer...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aribidara Jerry Portfolio</title>
+    <title>Aribidara Jerry - Portfolio</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="css/media-queries.css" />
     <link rel="stylesheet" href="css/all.css" />
@@ -111,7 +112,7 @@
             <div class="center">
                 <p class="content">
                     Hello! I'm Aribidara Jerry, a multifaceted individual with a passion for teaching, music, and technology. As a certified teacher, I've had the privilege of inspiring and educating students in various settings. My love for music led me to become an instrumentalist, and I've had the honor of being certified by renowned institutions such as <a href="https://muson.org/" target="_blank">The Musical Society Of Nigeria (MUSON)</a> and <a href="https://www.abrsm.org/en-ng" target="_blank">The Associated Board of Royal Schools of Music (ABRSM)</a>.<br /><br />
-                    In addition to my teaching and musical pursuits, I'm also a frontend developer with a keen interest in building innovative and user-friendly digital experiences. This site was solely developed by me. I'm always looking for ways to combine my skills to create something truly unique and impactful.
+                    In addition to my teaching and musical pursuits, I'm also a web developer with a keen interest in building innovative and user-friendly digital experiences. This site was solely developed by me. I'm always looking for ways to combine my skills to create something truly unique and impactful.
                 </p>
             </div>
         </article>
